# catcident-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  manage.py  pyproject.toml
accounts/: admin.py  middleware.py  models.py  views.py
accounts/migrations/: 0001_initial.py
config/: __init__.py  asgi.py  celery.py  tasks.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
fixtures/: initial_data.json
homepage/: admin.py  apps.py  signals.py  storages.py  urls.py
homepage/migrations/: 0001_initial.py  0002_eventcategory_newscategory_resourcecategory_and_more.py  0002_gallerycategory_alter_copyright_options_and_more.py  0002_homesection_heroslide_heroslidetranslation_and_more.py  0003_alter_familysite_options_alter_footersection_options_and_more.py  0004_alter_copyright_options_alter_familysite_options_and_more.py  0005_booktranslation_summary_and_more.py
homepage/models/: __init__.py  about_models.py  event_models.py  events_models.py  gallery_models.py  global_models.py  home_models.py  news_models.py  resource_models.py  resources_models.py
homepage/serializers/: about_serializers.py  event_serializers.py  events_serializers.py  gallery_serializers.py  global_serializers.py  home_serializers.py  news_serializers.py  resource_serializers.py  resources_serializers.py
homepage/views/: __init__.py  about_views.py  event_views.py  (+8 more)
uploads/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  storages.py  tasks.py  tests.py  urls.py  utils.py  views.py
(+13 files in other folders)
