[tool.poetry]
name = "catcident-backend"
version = "0.1.0"
description = ""
authors = ["2kwonhee <id@senterie.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
psycopg2-binary = "^2.9.10"
django-environ = "^0.11.2"
django-debug-toolbar = "^4.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
